rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__filters__filter_on_only_multi_stage_measure.snap
---
source: cubesqlplanner/src/tests/integration/multi_stage/filters.rs
expression: result
---
orders__status | orders__category
---------------+-----------------
completed      | books           
completed      | clothing        
completed      | electronics     
pending        | books           
pending        | clothing        
pending        | electronics
