rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__filters__multiple_filters.snap
---
source: cubesqlplanner/src/tests/integration/multi_stage/filters.rs
expression: result
---
orders__created_at_month | orders__amount_by_id
-------------------------+---------------------
2024-01-01 00:00:00      | 100.00              
2024-02-01 00:00:00      | 200.00              
2024-03-01 00:00:00      | 200.00
