rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__filters__time_filter_only.snap
---
source: cubesqlplanner/src/tests/integration/multi_stage/filters.rs
expression: result
---
orders__created_at_month | orders__amount_prev_month
-------------------------+--------------------------
2024-02-01 00:00:00      | 500.00                   
2024-03-01 00:00:00      | 750.00
